sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: reassignment to val
      i=i+1
       ^AlgGnomeSort:10: error: reassignment to val
      i=i-1
       ^AlgGnomeSort:11: error: reassignment to val
      if(i=0){
          ^AlgGnomeSort:12: error: reassignment to val
        i=i+1
         ^AlgGnomeSort:15: error: not found: value end
        end
        ^