sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var i=0
  for(i <- 1 to getNombreValeurs()){
    if(i<i+1){
      i=i+1
    }
    else{
      echange(i,i+1)
      i=i-1
      if(i=0){
        i=i+1
      }
      else{
        end
      }
    }
  }
}